added valid POM