@@ -6,7 +6,7 @@
   
   <dependencies>
   
-  	<dependency>
+   <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.9.9</version>
@@ -18,12 +18,6 @@
       <version>10.12.1.1</version>
     </dependency>
     
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.9.9</version>
-    </dependency>
-    
   </dependencies>
   
   
@@ -31,8 +25,9 @@
   
   <name>JavaHometaskTask1</name>
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>1.7</java.version>
     <maven.compiler.version>3.3</maven.compiler.version>
+    <maven.surefire.version>2.18.1</maven.surefire.version>
   </properties>
   <build>
     <plugins>
@@ -45,6 +40,32 @@
           <target>${java.version}</target>
           <compilerArgument>-Werror</compilerArgument>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.version}</version>
+        <executions>
+          <execution>
+            <id>default-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <reportsDirectory>reports</reportsDirectory>
+              <forkCount>2</forkCount>
+              <reuseForks>false</reuseForks>
+              <argLine>-Duser.language=en</argLine>
+              <argLine>-Xmx1024m</argLine>
+              <argLine>-XX:MaxPermSize=256m</argLine>
+              <argLine>-Dfile.encoding=UTF-8</argLine>
+              <useFile>false</useFile>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/suites.xml</suiteXmlFile>
+              </suiteXmlFiles>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
